test/spec/block-end-label-mismatch.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/block-end-label-mismatch.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
third_party/testsuite/block-end-label-mismatch.fail.wast:1:28: mismatching label "$a" != "$l"
(module (func block $a end $l))
                           ^^

;;; STDERR ;;)
